syntax = "proto3";

option csharp_namespace = "SpaceBattle.gRPC";

package server;

service EndPoint{
  rpc Command(CommandRequest) returns (CommandReply);
  rpc Order(stream OrderRequest) returns (stream OrderReply);
}
message CommandForObject{
	string Key = 1;
	string Value = 2;
}

message CommandRequest {
	string GameId = 1;
	string CommandType = 2;
	string GameItemId = 3;
	repeated CommandForObject Args = 4;
}

message CommandReply {
  int32 status = 1;
}

message OrderReply {
  bool status = 1;
}

message OrderRequest {
  string GameId = 1;
  map<string, string> map = 2;
}
